--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "start": "node genenv.js && ng serve",
+    "build": "node genenv.js && ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:willdev": "node dist/willdev/server/server.mjs"
@@ -23,6 +23,7 @@
     "@angular/platform-server": "^17.0.0",
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.7",
+    "@supabase/supabase-js": "^2.43.0",
     "express": "^4.18.2",
     "primeicons": "^7.0.0",
     "primeng": "^17.13.0",
@@ -38,6 +39,7 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
+    "dotenv": "^16.4.5",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
@@ -46,5 +48,10 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "tailwindcss": "^3.4.3",
     "typescript": "~5.2.2"
+  },
+  "overrides": {
+    "@supabase/supabase-js": {
+      "@supabase/gotrue-js": "2.61.0"
+    }
   }
 }
