--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-server": "^17.0.0",
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.7",
+    "@emailjs/browser": "^4.3.3",
     "@supabase/supabase-js": "^2.43.0",
     "express": "^4.18.2",
     "primeicons": "^7.0.0",
