perfs increase / wip

--- a/angular.json
+++ b/angular.json
@@ -35,7 +35,10 @@
               "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
               "node_modules/primeng/resources/primeng.min.css"
             ],
-            "scripts": [],
+            "scripts": [{
+              "input": "node_modules/@emailjs/browser/cjs/index.js",
+              "inject": false
+            }],
             "server": "src/main.server.ts",
             "prerender": {
               "discoverRoutes": true
