--- a/angular.json
+++ b/angular.json
@@ -31,8 +31,7 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/deeppurple-amber.css",
-              "src/styles.scss",
-              "node_modules/primeng/resources/primeng.min.css"
+              "src/styles.scss"
             ],
             "scripts": [{
               "input": "node_modules/@emailjs/browser/cjs/index.js",
