Fix pb font deployment

--- a/angular.json
+++ b/angular.json
@@ -47,6 +47,11 @@
           },
           "configurations": {
             "production": {
+              "optimization": {
+                "scripts": true,
+                 "styles": true,
+                 "fonts": false
+             },
               "budgets": [
                 {
                   "type": "initial",
