--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,6 +34,9 @@
             ],
             "@spartan-ng/ui-avatar-helm": [
                 ".\\libs/ui/ui-avatar-helm/src/index.ts"
+            ],
+            "@spartan-ng/ui-separator-helm": [
+                ".\\libs/ui/ui-separator-helm/src/index.ts"
             ]
         }
     },
