--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,24 +20,12 @@
         "useDefineForClassFields": false,
         "lib": ["ES2022", "dom"],
         "paths": {
-            "@spartan-ng/ui-button-helm": [
-                ".\\libs/ui/ui-button-helm/src/index.ts"
-            ],
-            "@spartan-ng/ui-icon-helm": [
-                ".\\libs/ui/ui-icon-helm/src/index.ts"
-            ],
-            "@spartan-ng/ui-tooltip-helm": [
-                ".\\libs/ui/ui-tooltip-helm/src/index.ts"
-            ],
-            "@spartan-ng/ui-card-helm": [
-                ".\\libs/ui/ui-card-helm/src/index.ts"
-            ],
-            "@spartan-ng/ui-avatar-helm": [
-                ".\\libs/ui/ui-avatar-helm/src/index.ts"
-            ],
-            "@spartan-ng/ui-separator-helm": [
-                ".\\libs/ui/ui-separator-helm/src/index.ts"
-            ]
+            "@spartan-ng/ui-button-helm": [".\\libs/ui/ui-button-helm/src/index.ts"],
+            "@spartan-ng/ui-icon-helm": [".\\libs/ui/ui-icon-helm/src/index.ts"],
+            "@spartan-ng/ui-tooltip-helm": [".\\libs/ui/ui-tooltip-helm/src/index.ts"],
+            "@spartan-ng/ui-card-helm": [".\\libs/ui/ui-card-helm/src/index.ts"],
+            "@spartan-ng/ui-avatar-helm": [".\\libs/ui/ui-avatar-helm/src/index.ts"],
+            "@spartan-ng/ui-separator-helm": [".\\libs/ui/ui-separator-helm/src/index.ts"]
         }
     },
     "angularCompilerOptions": {
