--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,7 @@
                         "tsConfig": "tsconfig.app.json",
                         "inlineStyleLanguage": "scss",
                         "assets": ["src/favicon.ico", "src/assets"],
-                        "styles": ["src/styles.css"],
+                        "styles": ["src/styles.css", "node_modules/ngx-toastr/toastr.css"],
                         "scripts": [
                             {
                                 "input": "node_modules/@emailjs/browser/cjs/index.js",
