--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "express": "^4.18.2",
         "ngx-scrollbar": ">=16.0.0",
         "ngx-sonner": "^2.0.0",
+        "ngx-toastr": "^19.0.0",
         "rxjs": "~7.8.0",
         "tslib": "^2.3.0",
         "zone.js": "~0.15.0"
