--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,43 +24,43 @@
     ],
     "paths": {
       "@spartan-ng/ui-button-helm": [
-        ".\\libs/ui/ui-button-helm/src/index.ts"
+        "./src/libs/ui/ui-button-helm/src/index.ts"
       ],
       "@spartan-ng/ui-icon-helm": [
-        ".\\libs/ui/ui-icon-helm/src/index.ts"
+        "./src/libs/ui/ui-icon-helm/src/index.ts"
       ],
       "@spartan-ng/ui-tooltip-helm": [
-        ".\\libs/ui/ui-tooltip-helm/src/index.ts"
+        "./src/libs/ui/ui-tooltip-helm/src/index.ts"
       ],
       "@spartan-ng/ui-card-helm": [
-        ".\\libs/ui/ui-card-helm/src/index.ts"
+        "./src/libs/ui/ui-card-helm/src/index.ts"
       ],
       "@spartan-ng/ui-avatar-helm": [
-        ".\\libs/ui/ui-avatar-helm/src/index.ts"
+        "./src/libs/ui/ui-avatar-helm/src/index.ts"
       ],
       "@spartan-ng/ui-separator-helm": [
-        ".\\libs/ui/ui-separator-helm/src/index.ts"
+        "./src/libs/ui/ui-separator-helm/src/index.ts"
       ],
       "@spartan-ng/ui-formfield-helm": [
-        ".\\libs/ui/ui-formfield-helm/src/index.ts"
+        "./src/libs/ui/ui-formfield-helm/src/index.ts"
       ],
       "@spartan-ng/ui-input-helm": [
-        ".\\libs/ui/ui-input-helm/src/index.ts"
+        "./src/libs/ui/ui-input-helm/src/index.ts"
       ],
       "@spartan-ng/ui-sonner-helm": [
-        ".\\libs/ui/ui-sonner-helm/src/index.ts"
+        "./src/libs/ui/ui-sonner-helm/src/index.ts"
       ],
       "@spartan-ng/ui-alert-helm": [
-        ".\\libs/ui/ui-alert-helm/src/index.ts"
+        "./src/libs/ui/ui-alert-helm/src/index.ts"
       ],
       "@spartan-ng/ui-spinner-helm": [
-        ".\\libs/ui/ui-spinner-helm/src/index.ts"
+        "./src/libs/ui/ui-spinner-helm/src/index.ts"
       ],
       "@spartan-ng/ui-badge-helm": [
-        ".\\libs/ui/ui-badge-helm/src/index.ts"
+        "./src/libs/ui/ui-badge-helm/src/index.ts"
       ],
       "@spartan-ng/ui-tabs-helm": [
-        ".\\libs/ui/ui-tabs-helm/src/index.ts"
+        "./src/libs/ui/ui-tabs-helm/src/index.ts"
       ],
     }
   },
